--- a/src/main/resources/fx/QrtApplication.fxml
+++ b/src/main/resources/fx/QrtApplication.fxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.input.KeyCodeCombination?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="main" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hawthornlife.qrt.QrtController">
+<VBox fx:id="main" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hawthornlife.qrt.QrtController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -26,9 +29,9 @@
                      </accelerator></MenuItem>
           </items>
         </Menu>
-            <Menu mnemonicParsing="false" text="Action">
+            <Menu mnemonicParsing="false" text="Generate">
               <items>
-                <MenuItem mnemonicParsing="false" text="Generate Report">
+                <MenuItem mnemonicParsing="false" onAction="#onClickGenerateReport" text="Investment Report">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="G" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator>
@@ -37,7 +40,21 @@
             </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS" />
+      <ScrollPane fitToHeight="true" fitToWidth="true" VBox.vgrow="ALWAYS">
+         <content>
+            <GridPane fx:id="mainGrid" hgap="20.0" vgap="20.0">              
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+               <columnConstraints>
+                  <ColumnConstraints minWidth="10.0" prefWidth="100.0" percentWidth="35"/>
+                  <ColumnConstraints minWidth="10.0" prefWidth="100.0" percentWidth="15"/>
+                  <ColumnConstraints minWidth="10.0" prefWidth="100.0" percentWidth="35"/>
+                  <ColumnConstraints minWidth="10.0" prefWidth="100.0" percentWidth="15"/>
+               </columnConstraints>                 
+            </GridPane>
+         </content>
+      </ScrollPane>
   </children>
   <stylesheets>
     <URL value="@QrtApplication.css" />
